<resources>
    <string name="app_name">FiBo</string>
    <string name="app_activity_main_title">Übersicht</string>
    <string name="create_account_title">Konto erstellen</string>
    <string name="create_account_button">Registrieren</string>
    <string name="create_account_text">Erstellen Sie ein Konto, um fortzufahren</string>
    <string name="email_hint">E-Mail-Adresse</string>
    <string name="password_hint">Passwort</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_settings">Settings</string>
    <string name="title_adding">Daten hinzufügen</string>
    <string name="dateCardTitle">Ausgewählter Zeitraum</string>
    <string name="datePickerTitle">Dashboard Zeitraum</string>
    <string name="timespanAllData">gesamter Zeitraum</string>
    <string name="timespanStartToEnd">%s – %s</string>
    <string name="INSURANCE">Versicherung</string>
    <string name="HEALTH">Gesundheit</string>
    <string name="LIVING">Wohnen</string>
    <string name="HOUSEHOLD">Haushalt</string>
    <string name="CULTURE">Kultur</string>
    <string name="EDUCATION">Bildung</string>
    <string name="SOCIALLIFE">Sozialleben</string>
    <string name="MOBILITY">Mobilität</string>
    <string name="CLOTHES">Kleidung</string>
    <string name="GIFT">Geschenk</string>
    <string name="OTHER">Sonstige</string>
    <string name="RESTAURANT">Restaurant</string>
    <string name="adding_expense">Ausgabe</string>
    <string name="adding_income">Einnahme</string>
    <string name="adding_amount">Betrag (€)</string>
    <string name="adding_date">Datum</string>
    <string name="adding_category">Kategorie</string>
    <string name="adding_address">Straße</string>
    <string name="error_message_password_field_empty">Passwortfeld ist leer</string>
    <string name="error_message_email_field">Emailfeld ist leer</string>
    <string name="error_message_store_field">Gib bitte ein Geschäft an</string>
    <string name="error_message_source_field">Gib bitte eine Quelle an</string>
    <string name="error_message_price_field">Gib bitte einen Betrag an</string>
    <string name="error_message_amount_field">Gib bitte eine Anzahl an</string>
    <string name="error_message_name_field">Gib bitte einen Namen an</string>
    <string name="error_message_date_field">Gib ein bitte Datum an</string>
    <string name="error_message_category_field">Gib bitte eine Kategorie an</string>
    <string name="error_message_address_field">Gib bitte eine Addresse an</string>
    <string name="headline_itemlist_view">Artikelübersicht</string>

    <string name="time_message_date_picker">Uhrzeit auswählen</string>


    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

    <string name="add_attachments_button">Anhänge hinzufügen Button</string>
    <string name="saveButton">Speichern</string>
    <string name="cancelButton">Abbrechen</string>
    <string name="place">Geschäft</string>
    <string name="source">Quelle</string>
    <string name="selectDate">Datum auswählen</string>
    <string name="DatePickerPositiveButtonText">OK</string>
    <string name="datePickerNegativeButtonText">Abbrechen</string>
    <string name="FAB_add_cashflow">Add Cashflow</string>
    <string name="date_picker_title_placeholder">Date picker title</string>
    <string name="date_picker_value_placeholder">18 Aug - 12 Nov</string>
    <string name="edit_time_range_icon_hint_placeholder">Edit time range</string>
    <string name="change_view_button_description">Ansicht ändern</string>
    <string name="recyclerview_initial_placeholder">I</string>
    <string name="recyclerview_title_placeholder">title</string>
    <string name="recyclerview_date_placeholder">date</string>
    <string name="recyclerview_value_placeholder">-20.00€</string>

    <string name="dashboard_filter_dialog_title">Nach Kategorien filtern</string>
    <string name="dashboard_filter_indication_categories">%1$o Kategorie(n) werden nicht angezeigt</string>
    <string name="apply">Übernehmen</string>
    <string name="invalid_input_error">Ungültige Angaben gemacht!</string>
    <string name="missing_token_error">Authentifizierungsfehler</string>
    <string name="already_registered_question">Bereits registriert?</string>
    <string name="click_here_for_login">Klicke hier zum einloggen!</string>
    <string name="no_account_yet_question">Noch kein Konto?</string>
    <string name="click_here_to_register">Jetzt registrieren!</string>
    <string name="login_button">Login</string>
    <string name="login_text">Melde dich mit deinem Konto an</string>
    <string name="login_title">Anmelden</string>
    <string name="login_currently_unavailable">Login zur Zeit nicht möglich</string>
    <string name="error_message_invalid_credentials">Ungültige Angaben</string>
    <string name="error_message_server_error">Server Fehler</string>
    <string name="error_message_unknown_error_occurred">Ein unbekannter Fehler ist aufgetreten</string>
    <string name="registration_currently_unavailable">Registrierung zur Zeit nicht möglich</string>
    <string name="delete_user_button">Konto löschen</string>
    <string name="deleting_user_currently_unavailable">Löschen des Users zur Zeit nicht möglich</string>
    <string name="user_successfully_deleted">Konto erfolgreich gelöscht</string>
    <string name="delete_user_confirmation_title">Konto löschen?</string>
    <string name="delete_user_confirmation_text">Bist du sicher, dass du dein Konto Löschen möchtest? Alle deine Daten werden damit gelöscht und du wirst keinen Zugriff mehr auf sie haben!</string>
    <string name="logout">Ausloggen</string>
    <string name="delete_user_confirm_button">Benutzer löschen</string>
    <string name="cancel_button">Abbrechen</string>
    <string name="account">Konto</string>
    <string name="edit_item_description">Artikel bearbeiten</string>
    <string name="recyclerview_price_placeholder">2,50 €</string>
    <string name="recyclerview_item_name_placeholder">item name</string>
    <string name="add_item_button_description">Artikel hinzufügen</string>
    <string name="item_name_hint">Artikelname</string>
    <string name="item_price_hint">Preis (€)</string>
    <string name="item_amount_hint">Anzahl</string>
    <string name="delete_item_button_description">Artikel entfernen</string>
    <string name="add_article_dialog_heading">Artikel hinzufügen</string>
    <string name="edit_article_dialog_heading">Artikel bearbeiten</string>
    <string name="adding_fragment_dialog_heading_placeholder">Artikel überschrift</string>

</resources>
